# env-guardian

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-test.yml
src/validator/: cli.py  core.py
tests/: test_core.py
tests/fixtures/empty_value/: .env  .env.example
tests/fixtures/extra/: .env
tests/fixtures/missing/: .env
