[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "env-guardian"
version = "0.1.0"
description = "CLI tool to validate .env file completeness"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.scripts]
env-guardian = "validator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
